--- a/styles/style.css
+++ b/styles/style.css
@@ -2,33 +2,67 @@
 
 
 /* Give the header element a background color */
+h1 {
+   background-color: coral;
+}
 
 
 /* Center everything in the header and footer */
+.h1 {
+   background-color: #F1F1F1;
+   text-align: center;
+   padding: 20px;
+}
 
 
 /* All text to Helvetica */
+body {
+   font-family: Helvetica;
+}
 
 
 /* All links default color is gray*/
-
+a {
+   color: gray;
+}
 
 /* All links on hover color red*/
+a:hover {
+   background-color:red;
+ }
 
 
 /* All Links visted color black*/
+a:visited {
+   color: black;
+   
+}
 
 
 /* Footer disclaimer text to be .5 em*/
+Footer p {
+   font-size: 50%;
+  }
 
 
 /* Remove bullet points from header navigation links */
+Header ul {
+   list-style-type: none; 
+}
 
 
 /* All Post's Comment Links Italicized, Orange and Remove the Underline */
+article p a[href^="#comments"]  {
+   font-style: italic;
+   color: orange;
+   text-decoration: none;
+}
 
 
 /* All Post's Comment Links Show Underline on Hover */
+article p a[href^="#comments"]:hover  {
+   text-decoration: underline;
+}
 
 
 /* All Post's Author's Links Bold and Blue, with no Underline */
